kubernetes-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment


metadata:
  name: rest-simpleapp
  
  labels:
    run: rest-simpleapp
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: rest-simpleapp
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: rest-simpleapp
        ports:
        - containerPort: 3000
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rest-simpleapp-svc
 
spec:
  selector:
    run: rest-simpleapp
  ports:
    - port: 8088
      targetPort: 3000
  type: NodePort
