ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rest-simpleapp-ing
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /$WERCKER_APPLICATION_OWNER_NAME/app/
        backend:
          serviceName: rest-simpleapp-svc
          servicePort: 8088
